// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toEndWith > fails when string ends with given suffix 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toEndWith([22m[32mexpected[39m[2m)[22m

Expected string to not end with:
  [32m\\"world\\"[39m
Received:
  [31m\\"hello world\\"[39m"
`;

exports[`.toEndWith > fails when string does not end with the given suffix 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEndWith([22m[32mexpected[39m[2m)[22m

Expected string to end with:
  [32m\\"hello\\"[39m
Received:
  [31m\\"hello world\\"[39m"
`;

exports[`.toEndWith > fails when the string is shorter than the given suffix 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEndWith([22m[32mexpected[39m[2m)[22m

Expected string to end with:
  [32m\\"hello world\\"[39m
Received:
  [31m\\"hello\\"[39m"
`;
